<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">

        <ImageView android:src="@drawable/www_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/image_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/www"
            android:textStyle="italic"
            android:textSize="22sp"/>

        <!--User name label-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textAutoComplete"
                android:hint="@string/user_id_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword"
                android:hint="@string/user_passwd_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            android:padding="12dp"
            android:text="@string/login"
            android:background="@color/dark_background"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login_fb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:padding="12dp"
            android:text="@string/facebook_login"
            android:background="@color/facebook"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login_google"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/google"
            android:padding="12dp"
            android:text="@string/google_login"
            android:textAllCaps="false" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView android:id="@+id/text_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/no_account"
                android:textSize="16sp"/>
            <TextView android:id="@+id/link_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/text_signup"
                android:text="@string/join"
                android:textStyle="italic"
                android:textSize="16sp"/>
        </RelativeLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>