<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/date_personale_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_background">
                <ProgressBar

                    android:id="@+id/progressBar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center|left"
                    android:text="@string/personal_data"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profileImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="20dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/img_default"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/person" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textCapSentences"
                            android:maxLines="1" />

                        <EditText
                            android:id="@+id/surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/surname"
                            android:inputType="textCapSentences"
                            android:maxLines="1" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/home" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/country"
                            android:inputType="textCapSentences"
                            android:maxLines="1" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/event" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/dark_background"
                            android:text="@string/birthday"
                            android:textAllCaps="false" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/contact_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/dark_background">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center|left"
                        android:text="@string/contacts"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/phone" />

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/phone"
                            android:inputType="text"
                            android:maxLines="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/mail" />

                        <EditText
                            android:id="@+id/mail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/mail"
                            android:inputType="text"
                            android:maxLines="1" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/dark_background">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center|left"
                    android:text="@string/user_profile"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/key" />

                    <EditText
                        android:id="@+id/id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/user_id"
                        android:inputType="text"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/lock" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:maxLines="1" />

                            <ImageView
                                android:id="@+id/visibility_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-50dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/visibility_off" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/password_confirm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password_confirm"
                                android:inputType="textPassword"
                                android:maxLines="1" />

                            <ImageView
                                android:id="@+id/visibility_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-50dp"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/visibility_off" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/confirm_form"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="60dp"
                android:text="@string/register"
                android:textSize="15dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>